# SURFScientificComputing

./: .coverage  .pre-commit-config.yaml  BoxFig.ipynb  README.md  pickpointsplot.ipynb  pyproject.toml
.github/workflows/: main.yaml
src/: BoundingPolygon.py  BoundingShape.py  __init__.py
tests/: test_BoundingShape.py
